--- a/interface/styles.css
+++ b/interface/styles.css
@@ -7,16 +7,23 @@ body {
    background: url('img/bg.png');
    font: 13px 'Open Sans', verdana;
 	margin: 0px;
-   padding: 30px;
+   padding: 0px;
 }
 
 table, tr, td {
    background: transparent;
-	border: 0px solid black;
+   border: 0px solid black;
+   font: 13px 'Open Sans', verdana;
 	margin: 0px;
 	padding: 0px;
 	border-spacing: 0px;
-	vertical-align: top;
+   vertical-align: top;
+   color: #F1F1F1;
+}
+
+#innerbody {
+   padding-top: 30px;
+   padding-left: 30px;
 }
 
 #relational, #red, #green, #blue {
@@ -24,6 +31,7 @@ table, tr, td {
    border: 4px solid white;
    padding: 0px;
    margin: 0px;
+   transition: .2s;
 }
 
 #red, #green, #blue {
@@ -54,4 +62,47 @@ table, tr, td {
    position: absolute;
    opacity: 0;
    transition: .2s;
+}
+
+#settings {
+	background: url('img/dark.png');
+	position: absolute;
+	height: 100%;
+   width: 100%;
+   opacity: 0;
+   display: none;
+   transition: .2s;
+}
+
+#settings td {
+	vertical-align: middle;
+}
+
+#settings div {
+	border: 3px solid #9C9C9C;
+	background: url('img/inner2.png');
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 15px;
+}
+
+#settings table {
+   width: 100%;
+}
+
+#settings table td:nth-child(2) {
+   text-align: right;
+}
+
+hr {
+   padding: 0px;
+   margin: 15px;
+   border: 0px solid black;
+   border-top: 1px dotted #8E8E8E;
+   border-bottom: 1px dotted #4F4F4F;
+}
+
+select {
+   width: 100px;
 }
